; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_ts_psip.c_ATSC_Attach_Dvbpsi_Base_Decoders.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_ts_psip.c_ATSC_Attach_Dvbpsi_Base_Decoders.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STT = common dso_local global i32 0, align 4
@ATSC_STT_TABLE_ID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ATSC_Attach_Dvbpsi_Base_Decoders(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32, i32* @STT, align 4
  %8 = load i32, i32* @ATSC_STT_TABLE_ID, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @ATSC_ATTACH_WITH_FIXED_DECODER(i32* %6, i32 %7, i32 %8, i32 0, i8* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @ATSC_Detach_Dvbpsi_Decoders(i32* %13)
  store i32 0, i32* %3, align 4
  br label %16

15:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %16

16:                                               ; preds = %15, %12
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @ATSC_ATTACH_WITH_FIXED_DECODER(i32*, i32, i32, i32, i8*) #1

declare dso_local i32 @ATSC_Detach_Dvbpsi_Decoders(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
